--- a/src/index.css
+++ b/src/index.css
@@ -91,7 +91,24 @@
   --White: #ffffff;
 }
 
+html.light {
+  --background-color: white;
+  --text-color: black;
+
+  --blur-effect: #ffffff96;
+}
+
+html.dark {
+  --background-color: rgb(0, 0, 0);
+  --text-color: white;
+
+  --blur-effect: #00000096;
+}
+
+
 body {
+  background-color: var(--background-color);
+  color: var(--text-color);
   display: flex;
   min-width: 100%;
   min-height: 100vh;
