--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,7 @@
 
 html.light {
   --background-color: white;
+  --bg-header: #f9f9f9;
   --text-color: black;
 
   --blur-effect: #ffffff96;
@@ -100,6 +101,7 @@ html.light {
 
 html.dark {
   --background-color: rgb(0, 0, 0);
+  --bg-header: #0a1613;
   --text-color: white;
 
   --blur-effect: #00000096;
