--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
 	--Pine_Glade: #b4c28b;
 	--Periglacial_Blue: #e7e7da;
 	--Gray_Nurse: #f9f9f9;
+  --blue: #6495ed;
 
   /* Variação das cores principais */
   --Casal-1: #2b6356;
@@ -92,7 +93,7 @@
 }
 
 html.light {
-  --background-color: white;
+  --background-color: #d3d3d3;
   --bg-header: #f9f9f9;
   --text-color: black;
 
@@ -100,7 +101,7 @@ html.light {
 }
 
 html.dark {
-  --background-color: rgb(0, 0, 0);
+  --background-color: #111111;
   --bg-header: #0a1613;
   --text-color: white;
 
