--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -1,13 +1,36 @@
 .home {
-    background-image: url(../../assets/ai-generated-8273256.jpg);
-    background-size: cover;
-    backdrop-filter: blur(2px);
-    align-items: center;
-    gap: 1rem;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../assets/ai-generated-8273256.jpg);
+  background-size: cover;
+  align-items: center;
+  gap: 1rem;
+}
+
+.indexes {
+  position: relative;
+  font-weight: 600;
+  text-transform: uppercase;
+  display: inline-block;
+  background-image: url(../../assets/index3.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  padding: 10px ;
+  margin: -10px -15px;
+}
+
+.icons {
+  max-width: 100px;
+  position: relative;
+  background-image: url(../../assets/index2.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  padding: 10px;
+  margin: -10px;
 }
 
 .content h1,
-.content span{
+.content span {
   position: relative;
   overflow: hidden;
   display: block;
@@ -16,85 +39,130 @@
 }
 
 .content h1::after,
-.content span::after{
-  content: '';
+.content span::after {
+  content: "";
   position: absolute;
   top: 0;
   right: 0;
   width: 100%;
   height: 100%;
   background: white;
-  animation: a-ltr-after 2s cubic-bezier(.77,0,.18,1) forwards;
+  animation: a-ltr-after 2s cubic-bezier(0.77, 0, 0.18, 1) forwards;
   transform: translateX(-101%);
 }
 
 .content h1::before,
-.content span::before{
-  content: '';
+.content span::before {
+  content: "";
   position: absolute;
   top: 0;
   right: 0;
   width: 100%;
   height: 100%;
   background: var(--Gray_Nurse-4);
-  animation: a-ltr-before 2s cubic-bezier(.77,0,.18,1) forwards;
+  animation: a-ltr-before 2s cubic-bezier(0.77, 0, 0.18, 1) forwards;
   transform: translateX(0);
 }
 
 .content h1:nth-of-type(1)::before,
 .content h1:nth-of-type(1)::after,
 .content span:nth-of-type(1)::before,
-.content span:nth-of-type(1)::after{
+.content span:nth-of-type(1)::after {
   animation-delay: 1s;
 }
 
 .content h1:nth-of-type(2)::before,
 .content h1:nth-of-type(2)::after,
 .content span:nth-of-type(2)::before,
-.content span:nth-of-type(2)::after{
+.content span:nth-of-type(2)::after {
   animation-delay: 1.5s;
 }
 
-@keyframes a-ltr-after{
-  0% {transform: translateX(-100%)}
-  100% {transform: translateX(101%)}
+@keyframes a-ltr-after {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(101%);
+  }
 }
 
-@keyframes a-ltr-before{
-  0% {transform: translateX(0)}
-  100% {transform: translateX(200%)}
+@keyframes a-ltr-before {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(200%);
+  }
 }
-
 
 .details {
-    align-items: center;
-    overflow-x: auto;
-    height: 40%; 
-    width: 100%; 
-  
-    .details_content {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      align-items: baseline;
-      min-width: 250px; 
-      padding: 1rem;
-      flex: none; 
+  align-items: center;
+  overflow-x: auto;
+  height: 40%;
+  width: 100%;
+
+  .details_content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: baseline;
+    min-width: 250px;
+    padding: 1rem;
+    flex: none;
+    width: 100%;
+    height: 100%;
+
+    @media (min-width: 400px) {
+      width: 50%;
+    }
+    @media (min-width: 768px) {
+      width: 33.33%;
+    }
+    @media (min-width: 1024px) {
+      width: 25%;
+      flex: 1;
+    }
+  }
+}
+
+.about {
+  padding: 1rem;
+
+  .img_about {
+    height: 100%;
+    width: 50%;
+    min-width: 350px;
+    min-height: 350px;
+
+    .img_mask {
+      mask-image: url(../../assets/mask2.png);
+      mask-size: cover;
+      mask-repeat: no-repeat;
+      mask-position: center;
+      object-fit: cover;
       width: 100%;
-      height: 100%; 
-  
-      @media (min-width: 400px) {
-        width: 50%; 
-      }
-      @media (min-width: 768px) {
-        width: 33.33%; 
-      }
-      @media (min-width: 1024px) {
-        width: 25%;
-        flex: 1; 
-      }
+      height: 100%;
+    }
+
+    @media (max-width: 768px) {
+      width: 100%;
     }
   }
 
+  .content_about {
+    padding: 1rem;
+    width: 40%;
+    height: 100%;
 
-  
+    @media (max-width: 768px) {
+      width: 100%;
+    }
+  }
+
+  @media (max-width: 768px) {
+    height: auto !important;
+    padding: 1.5rem;
+    flex-direction: column;
+  }
+}
