--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -160,9 +160,23 @@
     }
   }
 
+  .content_modal {
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8.4px);
+    -webkit-backdrop-filter: blur(8.4px);
+  }
+
   @media (max-width: 768px) {
     height: auto !important;
     padding: 1.5rem;
     flex-direction: column;
   }
+}
+
+
+.services {
+  mask: url(../../assets/mancha1.png) no-repeat center;
+  mask-size: cover;
 }
